	- Introduce /etc/eix-remote.conf and EIX_REMOTE_OPTS
	- eix-remote: Introduce -U and -f (useful as defaults)
	- Options from /etc/eix-sync.conf and EIX_SYNC_OPTS are now evaluated
	- Install sample /etc/*.conf
	- eix-remote: Include label names and correct paths in virtual names.
	- eix-remote: Remove -O since remote script now produces proper files.
	- Introduce --print-overlay-{path,label}
	- Fix multiple declaration of local variable, see
	  http://bugs.gentoo.org/show_bug.cgi?id=275300
	  Thanks to Stuart Shelton <srcshelton at gmail.com> for the patch.

*eix-0.16.2
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Default to SAVE_WORLD=true: I doubt that the world file is that
	  security relevant, and I guess many users don't know the feature.
	- Build system defaults to silent rules in case of >=automake-1.11.

*eix-0.16.1
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Allow optional #metadata-method(s) for cache method parse/ebuild,
	  if up-to-date metadata is found for the ebuild.
	  This speeds up things enormously if metadata is provided by an
	  overlay-maintainer (using: egencache --repo=foo --update).
	  Of course, it is still faster to use the metadata method directly.
	- Introduce CACHE_METHOD_PARSE to add the above automagically.
	- Internal change: merge cache methods parse and ebuild.
	- Fix memory leak in metadata.cc (aux was not freed in some cases).
	- Minor compatibility tweaks for gcc-4.4 and glibc-2.10

*eix-0.16.0
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Add NLS support and experimental translation into German.
	- Add versionsort helper tool (and ./configure --enable-separate-tool)
	- Support $PROFILE/package.keywords and $PROFILE/package.unmask
	- Workaround setenv for http://bugs.gentoo.org/show_bug.cgi?id=267807
	- Use non-capital variable names in scripts.
	- Minor bugfixes in scripts.
	- Some autotools/preprocessor cleanup.
	- manpage: Make clear that overlays must be paths, not repo-names.